# takflow

./: .gitignore  LICENSE  README.md  pyproject.toml
src/takflow/: __init__.py  build_info.py
src/takflow/backends/: __init__.py
src/takflow/backends/ecflow/: __init__.py  backend.py
src/takflow/backends/ecflow/serializer/: attributes.py  defs.py
src/takflow/backends/runtime/: __init__.py  orvix.py  slsubmit.py
src/takflow/backends/takler/: __init__.py  backend.py
src/takflow/config/: __init__.py  scheduling.py  workflow.py  workload.py
src/takflow/credential/: __init__.py  hooks.py  render.py
src/takflow/engine/: __init__.py  backend.py  ecflow.py  takler.py
src/takflow/flow/: __init__.py  hook.py  node.py
src/takflow/hooks/: __init__.py  base.py
src/takflow/job/: __init__.py
src/takflow/jobspec/: __init__.py  highlevel.py  model.py  render.py
src/takflow/resource/: __init__.py
src/takflow/serialize/: __init__.py
src/takflow/serialize/ecflow/: __init__.py  node.py
src/takflow/spec/: __init__.py
src/takflow/spec/jobspec/: __init__.py  jobspec.schema.json
src/takflow/spec/jobspec/conformance/: __init__.py  regen.py
src/takflow/spec/jobspec/conformance/golden/donau/: fcst_parallel.submit  graph_mem.submit  (+1 more)
src/takflow/spec/jobspec/conformance/vectors/: fcst_parallel.sh  graph_mem.sh  post_serial.sh
src/takflow/toolkit/: __init__.py  credential.py  job.py  resource.py  util.py
src/takflow/util/: __init__.py  runtime.py
tests/: test_conformance.py  test_job_render_multi.py  test_jobspec.py  test_serialize_ecflow.py
(+4 files in other folders)
